--- a/css/style.css
+++ b/css/style.css
@@ -444,16 +444,15 @@ button,
     font-weight: 400;
 }
 
-.stages__title span {
-    position: absolute;
+.stages__subtitle {
+    text-align: start;
     text-transform: capitalize;
-    top: 70px;
-    left: 300px;
     max-width: 280px;
     font-family: var(--ff);
     color: var(--color-third);
     font-size: 20px;
     line-height: 24px;
+    margin-bottom: 20px;
 }
 
 .stages__list {
@@ -462,10 +461,6 @@ button,
     margin-top: 64px;
     list-style-type: none;
     counter-reset: num;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 112px 112px 136px;
-    gap: 20px;
 }
 
 .stages__item {
@@ -476,6 +471,7 @@ button,
     line-height: 24px;
     padding: 20px;
     padding-left: 72px;
+    padding-bottom: 160px;
     background-image: url("../img/stages-bg.png"), url("../img/stages-bg-2.png");
     background-repeat: repeat;
     background-position: 50% 50%;
@@ -500,19 +496,10 @@ button,
     color: var(--color-default);
 }
 
-.stages__item-third {
-    grid-area: 1/3/3;
-}
-
-.stages__item-seven {
-    padding-right: 320px;
-    grid-area: 3/2/4/4;
-}
-
 .stages__image {
     position: absolute;
-    bottom: 0;
-    right: -65px;
+    bottom: 10px;
+    right: -35px;
     z-index: 101;
 }
 
@@ -536,7 +523,8 @@ button,
     position: relative;
     overflow: hidden;
     width: 100%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .slider-track {
@@ -692,6 +680,10 @@ button,
     order: -1;
 }
 
+.slide {
+    flex: 0 0 33.333%;
+}
+
 @media (max-width: 1366px) {
     .container {
         max-width: var(--vp-375);
@@ -729,7 +721,7 @@ button,
     }
 
     .stages__image {
-        top: 200px;
+        top: 600px;
         left: 0;
     }
     .stages__item {
@@ -742,5 +734,9 @@ button,
         font-size: 36px;
         line-height: 40px;
         padding-bottom: 68px;
+    }
+
+    .slide {
+        flex: 0 0 100%;
     }
 }
